--- a/templates/home.html
+++ b/templates/home.html
@@ -20,26 +20,29 @@
 <body>
 
     <!-- As a heading -->
-    
-        <div class="third">
-            <h2>PREDICT THE FLIGHT PRICE</h2>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">FLIGHT PRICE</a>
+            </div>
         </div>
+    </nav>
 
     <br><br><br>
 
 
     <div class="container">
 
-        <!-- <h1> CHECK THE FLIGHT PRICE </h1><br> -->
+
 
         <form action="\predict" method="post">
 
 
             <div class="row">
-                <div class="first">
+                <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="second"><b>Departure Date </b></h5>
+                            <h5 class="card-title">Departure Date</h5>
                             <!-- Departure -->
                             <input type="datetime-local" name="Dep_Time" id="Dep_Time" required="required">
                         </div>
@@ -47,12 +50,11 @@
                 </div>
                 <br>
                 <br>
-                <br><br>
-
-                <div class="first">
+                <br>
+                <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="second"><b>Arrival Date</b></h5>
+                            <h5 class="card-title">Arrival Date</h5>
                             <!-- Arrival -->
                             <input type="datetime-local" name="Arrival_Time" id="Arrival_Time" required="required">
                         </div>
@@ -65,11 +67,11 @@
             <br>
 
             <div class="row">
-                <div class="first">
+                <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
                             <!-- Source -->
-                            <h5 class="second"><b>Source</b></h5>
+                            <h5 class="card-title">Source</h5>
                             <select name="Source" id="Source" required="required">
                                 <option value="Delhi">Delhi</option>
                                 <option value="Kolkata">Kolkata</option>
@@ -79,10 +81,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="first">
+                
+                <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="second"><b>Destination</b></h5>
+                            <h5 class="card-title">Destination</h5>
                             <!-- Destination -->
                             <select name="Destination" id="Destination" required="required">
                                 <option value="Cochin">Cochin</option>
@@ -103,10 +106,10 @@
             <br>
 
             <div class="row">
-                <div class="first">
+                <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="second"><b>Stopage / Hault </b></h5>
+                            <h5 class="card-title">Stopage</h5>
                             <!-- Total Stops -->
                             <select name="stops" required="required">
                                 <option value="0">Non-Stop</option>
@@ -118,10 +121,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="first">
+                <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="second"><b>In which Airline you want to travel?</b></h5>
+                            <h5 class="card-title">Which Airline you want to travel?</h5>
                             <!-- Airline -->
                             <select name="airline" id="airline" required="required">
                                 <option value="Jet Airways">Jet Airways</option>
@@ -149,7 +152,7 @@
             <br>
             <br>
             <!-- Submit -->
-            <input type="submit" value="Submit" class="sub">
+            <input type="submit" value="Submit" class="btn btn-secondary">
         </form>
 
         <br>
@@ -177,4 +180,5 @@
         crossorigin="anonymous"></script>
 
 </body>
+
 </html>
