--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,6 @@
 body {
     /*background-color: #e1f4f3;*/
-    background-color: #6e60e6;
+    background-color: #6051db;
     text-align: center;
 }
 
