--- a/templates/home.html
+++ b/templates/home.html
@@ -85,7 +85,7 @@
 			</div><br>
 
 			<div>
-				<button type="button" class="sub"> Submit</button>
+				<button type="button" value="submit class="btn btn-secondary"> Submit</button>
 			</div>
 
 		</div>
