--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -29,7 +29,7 @@ body{
 	background: transparent !important;
 	box-shadow: none !important;
 }*/
-.sub{
+.btn-secondary{
     width: 200px !important;
     padding: 7px !important;
     font-size: 16px !important;
