--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 
 
     <!-- css -->
-    <link rel="stylesheet" href="design.css">
+    <link rel="stylesheet" href="static/css/styles.css">
 
 
 </head>
