--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <H4 align="center">FLIGHT PRICE</H4>
+                <H4> PREDICT THE FLIGHT PRICE</H4>
             </div>
         </div>
     </nav>
