--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image:url("plane1.jpg");
+    background-image:url("plane.jpg");
     background-size: cover;
     background-attachment: fixed; 
     /*background-color: #e1f4f3;*/
