--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
 <body>
 
     <!-- As a heading -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+   <!--  <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <H4> PREDICT THE FLIGHT PRICE</H4>
@@ -28,10 +28,12 @@
         </div>
     </nav>
 
-    <br><br><br>
+    <br><br><br> -->
 
 
     <div class="container">
+
+        <h2> PREDICT THE FLIGHT PRICE</h2>
 
 
 
