--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,36 +1,36 @@
-body{
-	/*background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5),url(aeroplane.jpg));*/
-	background-image: url("aeroplane.jpg");
-	background-size: cover;
-	background-position: center;
-}
 
+body {
+    background-image:url("aeroplane.jpg");
+    background-size: cover;
+    background-attachment: fixed; 
+    /*background-color: #e1f4f3;*/
+}
 .booking-form-box{
 	max-width: 350px;
 	border: 1px solid #ced4da;
 	margin: 10% auto 30 ;
+    text-align: center;
 }
-.booking-form{
-	padding: 10px 20px 40px;
+
+.navbar {
+    background-color: #333333;
 }
-.booking-form label{
-	margin-bottom: 5px;
-	margin-top: 10px;
-	font-size: 20px;
-	/*color: #fff;*/
-	color: black;
+
+h2 {
+    color: white;
+    margin-top: 100px;
+    text-align: center;
 }
-.input-grp{
-	width: 150px;
-	display: inline-block;
+h3{
+    color: white;
 }
-.form-control{
-	font-size: 16px;
-	border-radius: 0;
-	box-shadow: none;
-}
+
+/*a:hover {
+    color: #f0f0f0;
+  }*/
+
 .sub{
-    width: 200px;
+	width: 200px;
     padding: 7px;
     font-size: 16px;
     font-family: sans-serif;
@@ -42,6 +42,5 @@ body{
     border: 1px solid rgba(255,255,255,0.3);
     box-shadow: 1px 1px 5px rgba(0,0,0,0.3);
 }
-h4{
-	color: black;
-}
+
+
