--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("airplane.jpg");
+	background-image: url("aeroplane.jpg");
 	background-size: cover;
 	background-position: center;
 }
