--- a/templates/home.html
+++ b/templates/home.html
@@ -86,9 +86,8 @@
                             </select>
 			</div><br><br>
 
-			<div>
-				<button type="button" value="submit" class="sub"> Submit</button>
-			</div>
+				<input type="button" value="submit" class="sub"> Submit</input>
+			
 
 		</div>
 	</form>
