--- a/templates/home.html
+++ b/templates/home.html
@@ -86,7 +86,7 @@
                             </select>
 			</div><br><br>
 
-				<input type="button" value="submit" class="sub"> Submit</input>
+				<input type="button" value="submit" class="sub">
 			
 
 		</div>
