--- a/templates/home.html
+++ b/templates/home.html
@@ -90,7 +90,7 @@
                             </select>
 			</div><br><br>
 
-				<input type="button" value="submit" class="sub">
+				<input type="submit" value="Submit" class="sub">
 			
 
 		</div>
