--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
     <h2>Predict the Flight Fare</h2>
 	<div class="booking-form-box">
 
-	<form action="\predict" method="post">
+	<form action="/predict" method="post">
 		
 		<div class="booking-form">
 			
