--- a/templates/home.html
+++ b/templates/home.html
@@ -1,79 +1,132 @@
+
+
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flight Price Prediction</title>
-	
-	<!-- BootStrap -->
+
+
+    <!-- BootStrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+
     <!-- css -->
-    
     <link rel="stylesheet" href="static/css/styles.css">
 
 </head>
 
-
 <body>
 
-    <h2>Predict the Flight Fare</h2>
-	<div class="booking-form-box">
+    <!-- As a heading -->
+   <!--  <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <H4> PREDICT THE FLIGHT PRICE</H4>
+            </div>
+        </div>
+    </nav>
+    <br><br><br> -->
 
-	<form action="/predict" method="post">
-		
-		<div class="booking-form">
-			
-            <div class="input-grp">
-                <label>Source </label><br>
-			    <!-- <input type="text" class="form-control" placeholder="City" required="required"> -->
-			    <select name="Source" class="form-control" required="required">
+
+    <div class="container">
+
+        <h2> PREDICT THE FLIGHT PRICE</h2>
+
+
+
+        <form action="\predict" method="post">
+
+
+             <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- Source -->
+                            <h5 class="card-title">Source</h5>
+                            <select name="Source" id="Source" required="required">
                                 <option value="Delhi">Delhi</option>
                                 <option value="Kolkata">Kolkata</option>
                                 <option value="Mumbai">Mumbai</option>
                                 <option value="Chennai">Chennai</option>
-                </select><br><br>
-            </div>
-
-			<div class="input-grp">
-                <label> Destination </label><br>
-			    <!-- <input type="text" class="form-control" placeholder="City" required="required"> -->
-			    <select name="Destination" class="form-control" required="required">
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Destination</h5>
+                            <!-- Destination -->
+                            <select name="Destination" id="Destination" required="required">
                                 <option value="Cochin">Cochin</option>
                                 <option value="Delhi">Delhi</option>
-                                <!-- <option value="New Delhi">New Delhi</option> -->
+                                <option value="New Delhi">New Delhi</option>
                                 <option value="Hyderabad">Hyderabad</option>
                                 <option value="Kolkata">Kolkata</option>
-                </select><br><br>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Departure Date</h5>
+                            <!-- Departure -->
+                            <input type="datetime-local" name="Dep_Time" id="Dep_Time" required="required">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <br>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Arrival Date</h5>
+                            <!-- Arrival -->
+                            <input type="datetime-local" name="Arrival_Time" id="Arrival_Time" required="required">
+                        </div>
+                    </div>
+                </div>
             </div>
 
-			<div>
-				<label> Departure Date </label><br>
-				<input type="datetime-local" name="Departure_time" class="form-control select-date" required="required">
-			</div><br><br>
+            <br>
+            <br>
+            <br>
 
-			<div>
-				<label> Arrival Date </label><br>
-				<input type="datetime-local" name="Arrival_time" class="form-control select-date" required="required">
-			</div><br><br>
 
-			<div>
-				<label> Haults </label><br>
-				<!-- Number of Haults -->
-				<select class="form-control" name="stops" required="required">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title"> Haults </h5>
+                            <!-- Total Stops -->
+                            <select name="stops" required="required">
                                 <option value="0">Non-Stop</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
                                 <option value="4">4</option>
-                </select>
-			</div><br><br>
-
-			<div>
-				<label> Airline </label><br>
-				<!-- Airlines -->
-				<select name="airline" class="form-control" required="required">
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Airline you want to travel in?</h5>
+                            <!-- Airline -->
+                            <select name="airline" id="airline" required="required">
                                 <option value="Jet Airways">Jet Airways</option>
                                 <option value="IndiGo">IndiGo</option>
                                 <option value="Air India">Air India</option>
@@ -88,23 +141,33 @@
                                 <option value="Vistara Premium economy">Vistara Premium economy</option>
                                 <option value="Trujet">Trujet</option>
                             </select>
-			</div><br><br>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-				<input type="submit" value="Submit" class="sub">
-			
 
-		</div>
-	</form>
 
-	<br>
+            <br>
+            <br>
+            <br>
+            <!-- Submit -->
+            <input type="submit" value="Submit" class="sub">
+        </form>
+
+        <br>
         <br>
         <h3>{{ prediction_text }}</h3>
 
         <br>
         <br>
 
-</div>
-	<!-- JavaScript -->
+    </div>
+
+
+
+
+    <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -116,5 +179,5 @@
         crossorigin="anonymous"></script>
 
 </body>
-</html>
 
+</html>
