--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,14 +1,20 @@
 body {
-    background-image:url("airplane.jpg");
+    background-image:url("nj.jpg");
     background-size: cover;
     background-attachment: fixed; 
     /*background-color: #e1f4f3;*/
 }
-.booking-form-box{
-	max-width: 350px;
-	border: 1px solid #ced4da;
-	margin: 10% auto 30 ;
-    text-align: center;
+
+.form-container{
+    border: 0px solid #fff;
+    padding: 40px 60px;
+    /*padding: 10px 10px 40px 50px;*/
+    margin-top: 10vh;
+    font-size: 15px;
+
+box-shadow: 0px 5px 11px 10px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 5px 11px 10px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 5px 11px 10px rgba(0,0,0,0.75);
 }
 
 .navbar {
@@ -16,30 +22,16 @@ body {
 }
 
 h2 {
-    color: white;
-    margin-top: 100px;
+    color: black;
+    margin-top: 10px;
     text-align: center;
 }
 h3{
-    color: white;
+    color: black;
 }
-
-/*a:hover {
-    color: #f0f0f0;
-  }*/
-
-.sub{
-	width: 200px;
-    padding: 7px;
-    font-size: 16px;
-    font-family: sans-serif;
-    font-weight: 600 ;
-    border-radius: 3px;
-    background-color: rgba(250,100,0,0.8);
-    color: #fff;
-    cursor: pointer;
-    border: 1px solid rgba(255,255,255,0.3);
-    box-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+h5{
+    font-size: 25px;
+    font-weight: 600;
+    color: black;
 }
-
 
