--- a/templates/home.html
+++ b/templates/home.html
@@ -19,20 +19,9 @@
 
 <body>
 
-    <!-- As a heading -->
-  <!--   <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <H4> PREDICT THE FLIGHT PRICE</H4>
-            </div>
-        </div>
-    </nav>
-    <br><br><br> -->
-
-
     <div class="container">
 
-        <h2> PREDICT THE FLIGHT PRICE</h2>
+       <h1> Welcome To The Flight Fare Prediction</h1>
 
 
 
@@ -49,6 +38,7 @@
                                 <option value="Delhi">Delhi</option>
                                 <option value="Kolkata">Kolkata</option>
                                 <option value="Mumbai">Mumbai</option>
+                                <option value="Banglore">Banglore</option>
                                 <option value="Chennai">Chennai</option>
                             </select>
                         </div>
@@ -62,7 +52,7 @@
                             <select name="Destination" id="Destination" required="required">
                                 <option value="Cochin">Cochin</option>
                                 <option value="Delhi">Delhi</option>
-                                <option value="New Delhi">New Delhi</option>
+                                <option value="Banglore">Banglore</option>
                                 <option value="Hyderabad">Hyderabad</option>
                                 <option value="Kolkata">Kolkata</option>
                             </select>
