--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,19 +11,13 @@ body {
     /*padding: 10px 10px 40px 50px;*/
     margin-top: 10vh;
     font-size: 15px;
-
-box-shadow: 0px 5px 11px 10px rgba(0,0,0,0.75);
--webkit-box-shadow: 0px 5px 11px 10px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 5px 11px 10px rgba(0,0,0,0.75);
+    box-shadow: 0px 5px 11px 10px rgba(0,0,0,0.75);
+   -webkit-box-shadow: 0px 5px 11px 10px rgba(0,0,0,0.75);
+   -moz-box-shadow: 0px 5px 11px 10px rgba(0,0,0,0.75);
 }
-
-.navbar {
-    background-color: #333333;
-}
-
-h2 {
-    color: black;
-    margin-top: 10px;
+h1 {
+    color: #fff;
+    margin-top: 8px;
     text-align: center;
 }
 h3{
